Set COPY as default strategy for the 2nd level cache